<resources>
    <string name="hello">Hello World, DatabaseDemo!</string>
    <string name="app_name">弘毅</string>
    <string name="local_img">本地图片</string>
    <string name="characteristic">特色</string>
    <string name="brand">品牌</string>
    <string name="commercial_district">商业区</string>
    <string name="airport_station">机场车站</string>
    <string name="administrative_area">行政区</string>
    <string name="subway_line">地铁线</string>
    <string name="top_landmarks">热门地标</string>
    <string name="under_provice">下辖市区</string>
</resources>